--- a/config.example.ini
+++ b/config.example.ini
@@ -1,12 +1,20 @@
 [GENERAL]
 poll_interval_secs = 60
+auto_rent_criteria_path = auto_rent_criteria.txt
 
 [NOTIFICATION]
 apprise_config_path = apprise.yml
 test_notification = True
 
-[ONLEIHE]
+[ONLEIHE-CREDENTIALS]
+username = your_username
+password = your_password
+library = e_g_nbib24
+library-id = your_library_id_check_login_page
+
+[ONLEIHE-URLS]
 audio-sachbuecher = https://www.onleihe.de/nbib24/frontend/mediaList,0-0-0-102-0-0-0-2004-400002-0-0.html?category.filter=1&user.rating.filter=&page.count.filter=
 ebook-sachbuecher = https://www.onleihe.de/nbib24/frontend/mediaList,0-0-0-102-0-0-0-2004-400001-0-0.html?category.filter=1&user.rating.filter=&page.count.filter=
 ct-magazine = https://www.onleihe.de/nbib24/frontend/versionInfoList,0-0-0-109-0-0-0-2008-400005-812926447-0.html
 finanztest-magazine = https://www.onleihe.de/nbib24/frontend/versionInfoList,0-0-0-109-0-0-0-2008-400005-395170234-0.html
+linuxuser-magazine = https://www.onleihe.de/nbib24/frontend/simpleMediaList,0-0-0-109-0-0-0-0-0-357840791-0.html
