rename auto_rent_criteria to auto_rent_keywords and match keywords case-insensitive

--- a/config.example.ini
+++ b/config.example.ini
@@ -1,6 +1,6 @@
 [GENERAL]
 poll_interval_secs = 60
-auto_rent_criteria_path = auto_rent_criteria.txt
+auto_rent_keywords_path = auto_rent_keywords.txt
 
 [NOTIFICATION]
 apprise_config_path = apprise.yml
