feat: implement auto reserving including email notification feat: use media ids for unique detection instead of title/author feat: minor performance improvement

--- a/config.example.ini
+++ b/config.example.ini
@@ -5,6 +5,7 @@ auto_rent_keywords_path = auto_rent_keywords.txt
 [NOTIFICATION]
 apprise_config_path = apprise.yml
 test_notification = True
+email = mail@example.com
 
 [ONLEIHE-CREDENTIALS]
 username = your_username
